@@ -1,2 +1,3 @@
 ### Bug Fixes
 - more incorrect messages
+- issue with reinitializing discord socket
